<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ItemActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/l1"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/purple_700"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingTop="10dp"
            android:id="@+id/top_bar">

            <TextView
                android:id="@+id/home_item_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:drawableTop="@drawable/ic_baseline_home_24"
                android:text="home" />

            <EditText
                android:id="@+id/search_item_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/LightGray"
                android:drawableLeft="@drawable/ic_search"
                android:gravity="left|center_vertical"
                android:hint="Type keywords to search"
                android:padding="5dp"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/search_item_button"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/purple_700"
                android:baselineAligned="false"
                android:gravity="center"
                android:text="search"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_bar"></androidx.viewpager.widget.ViewPager>

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:dotsColor="@color/black"
            app:dotsSize="15dp"
            app:dotsSpacing="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_pager"
            app:progressMode="true"
            app:selectedDotColor="@color/black"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dots_indicator"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_name_caption"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/item_id_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:textColor="#000000"
                    android:text=""
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_name_caption"/>

                <TextView
                    android:id="@+id/owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:textColor="#000000"
                    android:text=""
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_id_caption"/>

                <TextView
                    android:id="@+id/highest_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:textColor="#000000"
                    android:text=""
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/owner_name"/>

                <TextView
                    android:id="@+id/expire_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:textColor="#000000"
                    android:text=""
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/highest_name"/>

                <TextView
                    android:id="@+id/item_price_caption"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="270dp"
                    android:layout_marginTop="-70dp"
                    android:text=""
                    android:textColor="#2B712E"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/item_name_caption"/>

                <TextView
                    android:id="@+id/item_category_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_price_caption"/>

                <TextView
                    android:id="@+id/item_location_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_category_caption"/>

                <TextView
                    android:id="@+id/item_description_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="#000000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_location_caption"/>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:id="@+id/bottom_bar">

            <TextView
                android:id="@+id/contact_seller_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="CONTACT"
                android:padding="15dp"
                android:gravity="center"
                android:textColor="#000"
                android:textStyle="bold"
                android:drawableBottom="@drawable/ic_baseline_chat_24" />


            <ImageView
                android:id="@+id/item_price_down_button"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:src="@drawable/ic_baseline_remove_24"/>

            <TextView
                android:id="@+id/upcoming_price"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/LightGray"
                android:padding="5dp"
                android:gravity="center"
                android:visibility="visible"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/item_price_up_button"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:src="@drawable/ic_baseline_add_24"/>

            <TextView
                android:id="@+id/bid_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/ic_baseline_done_all_24"
                android:text="BID"
                android:textColor="#000"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
