<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/MediumPurple"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingTop="10dp">
                <TextView
                    android:id="@+id/home_itemList_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:drawableTop="@drawable/ic_baseline_home_24"
                    android:text="home" />

                <EditText
                    android:id="@+id/search_itemList_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@color/LightGray"
                    android:drawableLeft="@drawable/ic_search"
                    android:gravity="left|center_vertical"
                    android:hint="Type keywords to search"
                    android:padding="5dp"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/search_itemList_button"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/purple_700"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:text="search"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/search_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/LightGray"
                android:drawableLeft="@drawable/ic_info"
                android:gravity="center"
                android:hint="Here are your results:"
                android:padding="8dp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#f2f2f2"
            android:paddingBottom="50px"
            android:layout_marginBottom="62dp"
            android:clipToPadding="false"
            tools:listitem="@layout/item_list_layout" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#f2f2f2"
        android:padding="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/chatList_itemList_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ChatList"
                android:drawableTop="@drawable/ic_chatlist"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_itemList_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:drawableTop="@drawable/ic_baseline_account_circle_24"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wallet_itemList_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wallet"
                android:drawableTop="@drawable/ic_baseline_account_balance_wallet_24"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>