<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminSearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@null"
            android:hint="search items"
            android:text=""
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:text="search" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:layout_below="@id/search_bar"

        android:layout_marginBottom="44dp"
        android:background="@color/color_link"
        tools:ignore="NotSibling" />

</RelativeLayout>